# VPTComm

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: vptcomm.h
src/: def.h  libstfw.c  stfw.h  stfw_def.h  stfw_docomm.c  stfw_docomm_ExpRed.c  stfw_init_ExpRed.c  stfw_init_common.c  stfw_init_naive.c  util.c  util.h  vpt.c  vpt.h
tests/: emb_test_n3.c  emb_test_n3_ExpRed.c  emb_test_n3_ExpRed_loc.c  emb_test_n3_Red.c  emb_test_n3_p2p.c
